# moodtracker_backend

./: .gitignore  Cargo.toml
migrations/2021-09-22-215438_tables/: down.sql  up.sql
src/: activity_handler.rs  auth_handler.rs  entry_handler.rs  errors.rs  main.rs  models.rs  mood_handler.rs  register_handler.rs  schema.rs  utils.rs
