[package]
name = "moodtracker_backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.3.1"
actix-web = "3.3.2"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.17"
juniper = "0.15.7"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
rust-argon2 = "0.8.3"
lazy_static = "1.4.0"
derive_more = "0.99.16"